--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,9 @@
     padding: 0px;
     margin: 0px;
 }
+body{
+    background-color: rgb(27, 35, 22);
+    background-image: url(../images/Background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
