build header menu --> index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     margin: 0px;
 }
 
-body {
+header {
     background-image: url(../images/Background.png);
     background-repeat: no-repeat;
     background-size: cover;
